# sensorics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
BME280-If/: README.md
BME280-If/src/: bme280.c  bme280.h  i2cif.c  i2cif.h  main.c
cmake/: FindAPR.cmake  FindSQLite3.cmake
include/bme280/: bme280.h
include/i2c/: i2cif.h
include/server/: http.h  server.h  simple_send.h
include/sql/: sqlite.h
include/util/: buffer.h  cmdline.h  logging.h  types.h  util.h
src/: README.md  main.rs
src/BME280-If/: README.md  bme280.c  bme280.h  install.sh  main.c
src/bme280/: bme280.c  mod.rs
src/i2c/: README.md  i2cif.c  i2cif.h
src/main/: bmeserver.c  bmesql.c  simpleserver.c
src/modules/bme280/: bme280.c
src/modules/server/: server.c
src/modules/sql/: sqlite.c
src/modules/util/: buffer.c  cmdline.c  logging.c
src/server/: a.out  main.c  server.c  server.h
src/util/: cmdline.c  cmdline.h  logging.c  logging.h  util.c
